--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-tools",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "description": "Tools for watching sass and js. Compress your css and js files. Optimize file size of images. Move all fonts at the one location.",
   "main": "gulpfile.js",
   "dependencies": {},
@@ -20,7 +20,9 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "vinyl-named": "^1.1.0",
+    "webpack-stream": "^4.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
