--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web-tools",
-  "version": "3.0.0",
+  "name": "web-dev-tools",
+  "version": "3.1.0",
   "description": "Tools for watching sass and js. Compress your css and js files. Optimize file size of images. Move all fonts at the one location.",
   "main": "index.js",
   "devDependencies": {
@@ -43,7 +43,7 @@
   "author": "rodrigogalura3rd@gmail.com",
   "license": "MIT",
   "bin": {
-    "web-tools": "./index.js"
+    "web-dev-tools": "./index.js"
   },
   "bugs": {
     "url": "https://github.com/Rodz3rd2/gulp-web-dev/issues"
