--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
     "run-sequence": "^1.2.2",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^4.0.2"
+  },
+  "devDependencies": {
+    "gulp-sass": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
