Show result of deleting files.

--- a/web-dev-tools.config.js.example
+++ b/web-dev-tools.config.js.example
@@ -14,7 +14,7 @@ module.exports = {
         watch_command: "scripts:watch",
         dir: "app/src/js",
         dest: "app/js",
-        sources: ["**/*.js"]
+        sources: ["app.js"]
     },
 
     build: {
