--- a/web-dev-tools.config.js.example
+++ b/web-dev-tools.config.js.example
@@ -32,6 +32,7 @@ module.exports = {
         images: {
             command: "build:images",
             dir: "app/src/img",
+            flatten: true,
             sources: [
                 "**/*.jpg",
                 "**/*.png",
@@ -43,6 +44,7 @@ module.exports = {
         fonts: {
             command: "build:fonts",
             dir: "app",
+            flatten: true,
             sources: [
                 "**/*.eot",
                 "**/*.svg",
