--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-dev-tools",
-  "version": "3.3.0",
+  "version": "3.4.0",
   "description": "Tools for watching sass and js. Compress your css and js files. Optimize file size of images. Move all fonts at the one location.",
   "main": "index.js",
   "dependencies": {
@@ -19,6 +19,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
+    "hoek": "^5.0.3",
     "run-sequence": "^1.2.2",
     "vinyl-named": "^1.1.0",
     "webpack-stream": "^4.0.2"
@@ -40,7 +41,7 @@
   "author": "rodrigogalura3rd@gmail.com",
   "license": "MIT",
   "bin": {
-    "web-dev-tools": "./index.js"
+    "wdt": "./index.js"
   },
   "bugs": {
     "url": "https://github.com/Rodz3rd2/gulp-web-dev/issues"
