--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-flatten": "^0.3.1",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-plumber": "^1.1.0",
+    "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
     "hoek": "^5.0.3",
@@ -46,9 +48,5 @@
   "bugs": {
     "url": "https://github.com/Rodz3rd2/gulp-web-dev/issues"
   },
-  "homepage": "https://github.com/Rodz3rd2/gulp-web-dev#readme",
-  "devDependencies": {
-    "gulp-imagemin": "^4.1.0",
-    "gulp-sass": "^3.1.0"
-  }
+  "homepage": "https://github.com/Rodz3rd2/gulp-web-dev#readme"
 }
