--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
-    "hoek": "^5.0.3",
     "run-sequence": "^1.2.2",
-    "vinyl-named": "^1.1.0",
+    "underscore": "^1.9.1",
     "webpack-stream": "^4.0.2"
   },
   "scripts": {
