--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-useref": "^3.1.2",
+    "node-notifier": "^5.3.0",
     "run-sequence": "^1.2.2",
     "underscore": "^1.9.1",
     "webpack-stream": "^4.0.2"
